--- a/TypeScript/ITVDN/tsconfig.json
+++ b/TypeScript/ITVDN/tsconfig.json
@@ -3,6 +3,9 @@
         "module": "CommonJS",
         "noImplicitAny": true,
         "removeComments": true,
-        "sourceMap": true 
-    }
+        "sourceMap": true,
+        "outDir": "./dist"
+    },
+    "include": ["./src/**/*"],
+    "exclude": ["node_modules"]
 }
