--- a/TypeScript/ITVDN/tsconfig.json
+++ b/TypeScript/ITVDN/tsconfig.json
@@ -6,6 +6,6 @@
         "sourceMap": true,
         "outDir": "./dist"
     },
-    "include": ["./src/**/*"],
+    "include": ["./**/*"],
     "exclude": ["node_modules"]
 }
