--- a/TypeScript/ITVDN/tsconfig.json
+++ b/TypeScript/ITVDN/tsconfig.json
@@ -4,7 +4,8 @@
         "noImplicitAny": true,
         "removeComments": true,
         "sourceMap": true,
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "lib": ["DOM", "ES2015"]
     },
     "include": ["./**/*"],
     "exclude": ["node_modules"]
